<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.remartins</groupId>
	<artifactId>byte-chameleon</artifactId>
	<version>1.0.0</version>

	<properties>
		<jdk.version>1.6</jdk.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.sun</groupId>
			<artifactId>tools</artifactId>
			<version>1.4.2</version>
			<scope>system</scope>
			<systemPath>${java.home}/../lib/tools.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.22.0-GA</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.10</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.ea.agentloader</groupId>
			<artifactId>ea-agent-loader</artifactId>
			<version>1.0.3</version>
		</dependency>
	</dependencies>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.3.0.603</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>false</downloadJavadocs>
				</configuration>
			</plugin>

			<!-- Set a compiler level -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Premain-Class>br.com.remartins.bytechameleon.Agent</Premain-Class>
										<Can-Redefine-Classes>true</Can-Redefine-Classes>
										<Can-Retransform-Classes>true</Can-Retransform-Classes>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-dependency-plugin</artifactId> -->
			<!-- <version>3.0.2</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <id>copy-agent</id> -->
			<!-- <phase>process-test-classes</phase> -->
			<!-- <goals> -->
			<!-- <goal>copy</goal> -->
			<!-- </goals> -->
			<!-- <configuration> -->
			<!-- <artifactItems> -->
			<!-- <artifactItem> -->
			<!-- <groupId>${project.groupId}</groupId> -->
			<!-- <artifactId>${project.artifactId}</artifactId> -->
			<!-- <version>${project.version}</version> -->
			<!-- <outputDirectory>${project.build.directory}</outputDirectory> -->
			<!-- <destFileName>agent.jar</destFileName> -->
			<!-- </artifactItem> -->
			<!-- </artifactItems> -->
			<!-- </configuration> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->
			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-surefire-plugin</artifactId> -->
			<!-- <version>2.20.1</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <id>failsafe-integration-tests</id> -->
			<!-- <phase>integration-test</phase> -->
			<!-- <goals> -->
			<!-- <goal>verify</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- <configuration> -->
			<!-- <systemPropertyVariables> -->
			<!-- <propertyName>propertyValue</propertyName> -->
			<!-- <buildDirectory>${project.build.directory}</buildDirectory> -->
			<!-- </systemPropertyVariables> -->
			<!-- <argLine>-javaagent:${project.build.directory}/byte-chameleon-1.0.0.jar</argLine> -->
			<!-- </configuration> -->
			<!-- </plugin> -->

			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-failsafe-plugin</artifactId> -->
			<!-- <version>2.19.1</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <goals> -->
			<!-- <goal>integration-test</goal> -->
			<!-- <goal>verify</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- <configuration> -->
			<!-- <argLine>-javaagent:${project.build.directory}/byte-chameleon-1.0.0.jar==/home/renato/developer/projetos/java/byte-chameleon/src/test/java/br/com/remartins/bytechameleon/byte-chameleon_en.txt</argLine> -->
			<!-- </configuration> -->
			<!-- </plugin> -->

			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-failsafe-plugin</artifactId> -->
			<!-- <version>2.20.1</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <goals> -->
			<!-- <goal>integration-test</goal> -->
			<!-- <goal>verify</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- <configuration> -->
			<!-- <argLine>-Djava.security.manager -->
			<!-- -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine> -->
			<!-- </configuration> -->
			<!-- </plugin> -->
		</plugins>



	</build>

</project>